FOTK/VPC/vpc.tf
resource "aws_vpc" "fotk_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "fotk_vpc"
  }
}
